<resources>
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="app_name">Voyager</string>
    <string name="locationdetect">Getting location</string>
    <string name="nointernetmessage">Kindly check internet</string>
    <string name="facebook_app_id">1527465220884024</string>
    <string name="title_activity_landing_page2">LandingPageActivity2</string>
    <string name="agreetoour">BY CREATING ACCOUNT YOU AGREE TO OUR</string>
    <string name="agreetoour2">TERMS &amp; CONDITIONS AND POLICY</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="register">Register</string>
    <string name="next">Next</string>
    <string name="ok">OK</string>
    <string name="source">Source</string>
    <string name="Home">Home</string>
    <string name="office">Office</string>
    <string name="destination">Destination</string>
    <string name="exercise_spinner_prompt">CHANGE PROFILE</string>
    <string name="forgotpassword"><u>FORGOT PASSWORD</u></string>
    <string name="addcontact">Add Contact</string>
    <string name="apply">Apply</string>
    <string name="promocode">Promo Code</string>
    <string name="resendotp">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="changenumber">Change Number</string>
    <string name="signin">SIGN IN</string>
    <string name="update">Update</string>
    <string name="submit">Submit</string>
    <string name="emergencynote">You can add Max 4 emergency contacts</string>
    <string name="personal">Personal</string>
    <string name="emailid">Email Id</string>
    <string name="payment">Default Payment</string>
    <string name="fname">First name</string>
    <string name="lname">Last name</string>
    <string name="mobile">Mobile number</string>
    <string name="changepassword">Change Password</string>
    <string name="personaldetail">Personal Details</string>
    <string name="business">Business</string>
    <string name="personel">Personal</string>
    <string name="mngemrcontact">Emergency Contact</string>
    <string name="payway">Payway</string>
    <string name="password">Password</string>
    <string name="google_app_id">82222888639</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="currentpassword">Current Password</string>
    <string name="newpassword">New Password</string>
    <string name="confirmnewpassword">Confirm Password</string>
    <string name="save">Save</string>
    <string name="setupemergency"><u>SET UP YOUR EMERGENCY CONTACTS</u></string>
    <string name="addfavplace"><u>Add Favorite Place</u></string>
    <string name="logout"><u>Log Out</u></string>
    <string name="verifytext"><u>We have sent a verification on your number</u></string>
    <string name="verifinumber"><u>FORGOT PASSWORD</u></string>
    <string name="enterverificode"><u>ENTER VERIFICATION CODE</u></string>
    <string name="whyverify"><u>Why verify?</u></string>
    <string name="callme"><u>CALL ME</u></string>
    <string name="callstring"><u>If you dont recieve an sms in 30 seconds tap here to get a voice call with verification code.</u></string>
    <string name="shareinvitecode">SHARE YOUR INVITE CODE</string>
    <string name="shareinvitemessage2">Send friends free rides and you will get one too, worth </string>
    <string name="send_friend_free_ride"></string>
    <string name="invitefriends">INVITE FRIENDS</string>
    <string name="note_estimate">Note - This is an approximate estimate Actual cost may very based ontraffic &amp; other conditions</string>
    <string name="taxiname">Taxiname</string>
    <string name="ridenumber">Ride Number</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="ridedistance">Ride Distance</string>
    <string name="timetaken">Time taken</string>
    <string name="waittime">Wait Time</string>
    <string name="totalbill">Total bill</string>
    <string name="totalpaid">Total paid</string>
    <string name="usecoupon">USE COUPON</string>
    <string name="mailinvoice">MAIL INVOICE</string>
    <string name="support">SUPPORT</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="cancelride">CANCEL RIDE</string>
    <string name="billingissue">Billing Issue</string>
    <string name="driverrelatedissue">Driver Related Issue</string>
    <string name="ridedelay">Ride Delayed</string>
    <string name="cabquality">Cab Quality Issue</string>
    <string name="leftbelonging">Left Belonging In The Cab</string>
    <string name="accidentduring">Accident During Trip</string>
    <string name="otherhelptopic">Other Help Topic</string>
    <string name="drivername">Driver Name</string>
    <string name="carname">Car Name</string>
    <string name="carnumber">Car Number</string>
    <string name="calldriver">Call Driver</string>
    <string name="rateride">Rate Ride</string>
    <string name="share1details">Share Details</string>
    <string name="help1">Account</string>
    <string name="help2">Payment</string>
    <string name="help3">How to use Voyager</string>
    <string name="help4">Voyager for Buisness</string>
    <string name="help5">Driver Problem</string>
    <string name="help6">Cab Facilities</string>
    <string name="help7">Other</string>
    <string-array name="CountryCodes">
        <item>93,AF</item>
        <item>355,AL</item>
        <item>213,DZ</item>
        <item>376,AD</item>
        <item>244,AO</item>
        <item>54,AR</item>
        <item>374,AM</item>
        <item>297,AW</item>
        <item>61,AU</item>
        <item>43,AT</item>
        <item>994,AZ</item>
        <item>973,BH</item>
        <item>880,BD</item>
        <item>375,BY</item>
        <item>32,BE</item>
        <item>501,BZ</item>
        <item>229,BJ</item>
        <item>975,BT</item>
        <item>591,BO</item>
        <item>387,BA</item>
        <item>267,BW</item>
        <item>55,BR</item>
        <item>673,BN</item>
        <item>359,BG</item>
        <item>226,BF</item>
        <item>95,MM</item>
        <item>257,BI</item>
        <item>855,KH</item>
        <item>237,CM</item>
        <item>1,CA</item>
        <item>238,CV</item>
        <item>236,CF</item>
        <item>235,TD</item>
        <item>56,CL</item>
        <item>86,CN</item>
        <item>61,CX</item>
        <item>61,CC</item>
        <item>57,CO</item>
        <item>269,KM</item>
        <item>242,CG</item>
        <item>243,CD</item>
        <item>682,CK</item>
        <item>506,CR</item>
        <item>385,HR</item>
        <item>53,CU</item>
        <item>357,CY</item>
        <item>420,CZ</item>
        <item>45,DK</item>
        <item>253,DJ</item>
        <item>670,TL</item>
        <item>593,EC</item>
        <item>20,EG</item>
        <item>503,SV</item>
        <item>240,GQ</item>
        <item>291,ER</item>
        <item>372,EE</item>
        <item>251,ET</item>
        <item>500,FK</item>
        <item>298,FO</item>
        <item>679,FJ</item>
        <item>358,FI</item>
        <item>33,FR</item>
        <item>689,PF</item>
        <item>241,GA</item>
        <item>220,GM</item>
        <item>995,GE</item>
        <item>49,DE</item>
        <item>233,GH</item>
        <item>350,GI</item>
        <item>30,GR</item>
        <item>299,GL</item>
        <item>502,GT</item>
        <item>224,GN</item>
        <item>245,GW</item>
        <item>592,GY</item>
        <item>509,HT</item>
        <item>504,HN</item>
        <item>852,HK</item>
        <item>36,HU</item>
        <item>91,IN</item>
        <item>62,ID</item>
        <item>98,IR</item>
        <item>964,IQ</item>
        <item>353,IE</item>
        <item>972,IL</item>
        <item>39,IT</item>
        <item>225,CI</item>
        <item>81,JP</item>
        <item>962,JO</item>
        <item>7,KZ</item>
        <item>254,KE</item>
        <item>686,KI</item>
        <item>965,KW</item>
        <item>996,KG</item>
        <item>856,LA</item>
        <item>371,LV</item>
        <item>961,LB</item>
        <item>266,LS</item>
        <item>231,LR</item>
        <item>218,LY</item>
        <item>423,LI</item>
        <item>370,LT</item>
        <item>352,LU</item>
        <item>853,MO</item>
        <item>389,MK</item>
        <item>261,MG</item>
        <item>265,MW</item>
        <item>60,MY</item>
        <item>960,MV</item>
        <item>223,ML</item>
        <item>356,MT</item>
        <item>692,MH</item>
        <item>222,MR</item>
        <item>230,MU</item>
        <item>262,YT</item>
        <item>52,MX</item>
        <item>691,FM</item>
        <item>373,MD</item>
        <item>377,MC</item>
        <item>976,MN</item>
        <item>382,ME</item>
        <item>212,MA</item>
        <item>258,MZ</item>
        <item>264,NA</item>
        <item>674,NR</item>
        <item>977,NP</item>
        <item>31,NL</item>
        <item>599,AN</item>
        <item>687,NC</item>
        <item>64,NZ</item>
        <item>505,NI</item>
        <item>227,NE</item>
        <item>234,NG</item>
        <item>683,NU</item>
        <item>850,KP</item>
        <item>47,NO</item>
        <item>968,OM</item>
        <item>92,PK</item>
        <item>680,PW</item>
        <item>507,PA</item>
        <item>675,PG</item>
        <item>595,PY</item>
        <item>51,PE</item>
        <item>63,PH</item>
        <item>870,PN</item>
        <item>48,PL</item>
        <item>351,PT</item>
        <item>1,PR</item>
        <item>974,QA</item>
        <item>40,RO</item>
        <item>7,RU</item>
        <item>250,RW</item>
        <item>590,BL</item>
        <item>685,WS</item>
        <item>378,SM</item>
        <item>239,ST</item>
        <item>966,SA</item>
        <item>221,SN</item>
        <item>381,RS</item>
        <item>248,SC</item>
        <item>232,SL</item>
        <item>65,SG</item>
        <item>421,SK</item>
        <item>386,SI</item>
        <item>677,SB</item>
        <item>252,SO</item>
        <item>27,ZA</item>
        <item>82,KR</item>
        <item>34,ES</item>
        <item>94,LK</item>
        <item>290,SH</item>
        <item>508,PM</item>
        <item>249,SD</item>
        <item>597,SR</item>
        <item>268,SZ</item>
        <item>46,SE</item>
        <item>41,CH</item>
        <item>963,SY</item>
        <item>886,TW</item>
        <item>992,TJ</item>
        <item>255,TZ</item>
        <item>66,TH</item>
        <item>228,TG</item>
        <item>690,TK</item>
        <item>676,TO</item>
        <item>216,TN</item>
        <item>90,TR</item>
        <item>993,TM</item>
        <item>688,TV</item>
        <item>971,AE</item>
        <item>256,UG</item>
        <item>44,GB</item>
        <item>380,UA</item>
        <item>598,UY</item>
        <item>1,US</item>
        <item>998,UZ</item>
        <item>678,VU</item>
        <item>39,VA</item>
        <item>58,VE</item>
        <item>84,VN</item>
        <item>681,WF</item>
        <item>967,YE</item>
        <item>260,ZM</item>
        <item>263,ZW</item>
    </string-array>
    <string-array name="month">
    <item>01</item>
    <item>02</item>
    <item>03</item>
    <item>04</item>
    <item>05</item>
    <item>06</item>
    <item>07</item>
    <item>08</item>
    <item>09</item>
    <item>10</item>
    <item>11</item>
    <item>12</item>
    </string-array>
    <string name="title_activity_home_page_drawer">HomePageDrawerActivity</string>
    <string name="email">Email</string>
    <string name="forgotpin_verify">Enter pin for verification</string>
</resources>