<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    android:orientation="vertical">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tool_bar"
        android:layout_gravity="center_horizontal"
        android:gravity="top|center"
        android:orientation="vertical"
        android:weightSum="1">


        <ImageView
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"

            android:background="@drawable/share_icon"
            android:text=" " />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/shareinvitecode"
            android:textColor="#ffffff"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:id="@+id/invitecode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/send_friend_free_ride"
            android:textColor="@color/yellow"
            android:textSize="@dimen/text_size_24"
            android:textStyle="bold" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"

            android:gravity="center"
            android:text="@string/shareinvitemessage2"
            android:textColor="#ffffff"
            android:textSize="@dimen/text_size_16" />
        <Button
            android:id="@+id/btn_invite"
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="15dip"
            android:background="@drawable/selector_btn"
            android:elevation="5dip"
            android:singleLine="true"
            android:text="@string/invitefriends"
            android:textColor="@color/light_black"
            android:textSize="@dimen/text_size_16" />

    </LinearLayout>


</RelativeLayout>