<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar" />

    <LinearLayout
        android:id="@+id/messagelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/setupemergency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/setupemergency"
            android:textColor="#ffffff"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/emergencynote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/emergencynote"
            android:textColor="#ffffff"
            android:textSize="20dp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/addcontact"
        android:layout_below="@+id/toolbar"
        android:layout_weight="1"></android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/addcontact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:background="#2bbb9e"
        android:text="@string/addcontact"
        android:textSize="20dp" />

</RelativeLayout>