<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app">

    <include android:id="@+id/toolbar"
        layout="@layout/tool_bar" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/currentpassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/inputbox_height"
            android:layout_marginTop="15dip"
            android:background="@drawable/white_btn"
            android:elevation="5dip"
            android:hint="@string/currentpassword"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:padding="5dip"
            android:singleLine="true"
            android:textColor="@color/light_black"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/text_size_16" />

        <EditText
            android:id="@+id/newpassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/inputbox_height"
            android:layout_marginTop="15dip"
            android:background="@drawable/white_btn"
            android:elevation="5dip"
            android:hint="@string/newpassword"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:padding="5dip"
            android:singleLine="true"
            android:textColor="@color/light_black"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/text_size_16" />

        <EditText
            android:id="@+id/confirmnewpassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/inputbox_height"
            android:layout_marginTop="15dip"
            android:background="@drawable/white_btn"
            android:elevation="5dip"
            android:hint="@string/confirmnewpassword"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:padding="5dip"
            android:singleLine="true"
            android:textColor="@color/light_black"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/text_size_16" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="bottom">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/save"
                android:layout_gravity="center_horizontal"
                android:background="#2bbb9e" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>